# zenml-learning

./: README.md  basic_pipeline.py  pyproject.toml  quickstart_stack.yaml  simple_component_minio.yaml  zenml-practice.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.zen/: config.yaml
components/: default_test.sh
components/orchestrator/: docker.sh  kubeflow.sh  kubernetes.sh
