[tool.poetry]
name = "zenml-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
zenml = {extras = ["server"], version = "*"}
mlstacks = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
